<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity"
    android:background="#f2f2f2"
    >

    <!-- top -->
    <LinearLayout
        android:id="@id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="#F2E6DF"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- name app -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="20dp" />

        <!-- welcome texte -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_welcome_part_1"
                android:textSize="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_welcome_part_2"
                android:layout_marginBottom="20dp"
                android:textSize="32dp"/>

        </LinearLayout>
    </LinearLayout>

    <!-- main -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/top"
        android:orientation="vertical"
        android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_subject"
        android:layout_marginBottom="20dp"
        android:textSize="32dp"/>

        <!-- container cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">

            <!-- card -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#BEC8F9"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginRight="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_maths_geo"
                    android:textSize="20dp"
                    android:layout_marginBottom="40dp"
                    />

                <Button
                    android:id="@+id/btn_maths_exercices"
                    android:layout_gravity="end"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text=">"
                    android:textColor="#252525"

                    app:backgroundTint="#f2f2f2"

                    app:cornerRadius="25dp"

                    android:padding="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"

                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    />

            </LinearLayout>

            <!-- card -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#C9E0DD"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_culture"
                    android:textSize="20dp"
                    android:layout_marginBottom="40dp"
                    />

                <Button
                    android:layout_gravity="end"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text=">"
                    android:textColor="#252525"

                    app:backgroundTint="#f2f2f2"

                    app:cornerRadius="25dp"

                    android:padding="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"

                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>