<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/white">

    <!-- banner -->
    <LinearLayout
        android:id="@id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        android:background="@drawable/banner"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- name app -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"

            android:layout_marginBottom="20dp" />

        <!-- welcome texte -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:textSize="32dp"/>



        </LinearLayout>
    </LinearLayout>

    <!-- main -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/top"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_form_title"
            android:layout_marginBottom="20dp"
            android:textSize="32dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:hint="Dodo"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/sign_up_last_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:hint="Doe"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:hint="John"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="15dp"/>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Créer"
                android:layout_gravity="center"
                app:cornerRadius="8dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue" />

            <!-- ligne -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D2D2D2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <Button
                android:id="@+id/btn_back_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#BEC8F9"
                app:strokeColor="#AEC4FF"
                app:strokeWidth="1dp"
                app:backgroundTint="#f2f2f2"
                android:text="Retour en arrière"
                android:layout_gravity="center"
                app:cornerRadius="8dp"
                />


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>